--- a/julia/problem_097.ipynb
+++ b/julia/problem_097.ipynb
@@ -12,9 +12,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "8d522a49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2cbb5843",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  145.959 ms (6540 allocations: 77.53 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -26,8 +43,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "string(28433*big(2)^big(7830457)+1)[end-9:end]"
+    "@btime string(28433*big(2)^big(7830457)+1)[end-9:end]"
    ]
   }
  ],
