--- a/python/problem_011.ipynb
+++ b/python/problem_011.ipynb
@@ -111,8 +111,7 @@
     "            products.append(p)\n",
     "    \n",
     "    # Return\n",
-    "    return max(products)\n",
-    "    "
+    "    return max(products)"
    ]
   },
   {
@@ -143,7 +142,7 @@
     "for key, value in grid_lines(test_grid).items():\n",
     "    print(key, value)\n",
     "\n",
-    "assert greatest_adjacent_numbers(2, grid_lines(test_grid)) == 72 # 8 * 9\n"
+    "assert greatest_adjacent_numbers(2, grid_lines(test_grid)) == 72 # 8 * 9"
    ]
   },
   {
