--- a/julia/problem_015.ipynb
+++ b/julia/problem_015.ipynb
@@ -38,37 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5e83130",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fac (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function fac(n)::BigInt\n",
-    "    \"\"\"\n",
-    "    factorial function\n",
-    "    fac(5) == 120\n",
-    "    \"\"\"\n",
-    "    f = big(1)\n",
-    "    for x in 1:n\n",
-    "        f *= x\n",
-    "    end\n",
-    "    return f\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "42ee3c37",
+   "id": "9d7f9afa",
    "metadata": {},
    "outputs": [
     {
@@ -82,9 +52,7 @@
     }
    ],
    "source": [
-    "function binom(n, k)::BigInt\n",
-    "    return fac(n)/(fac(n-k)*fac(k))\n",
-    "end"
+    "binom(n, k)::BigInt = factorial(big(n))/(factorial(big(n-k))*factorial(big(k)))"
    ]
   },
   {
@@ -97,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8078f674",
    "metadata": {},
    "outputs": [],
@@ -107,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "90e6f75e",
    "metadata": {},
    "outputs": [
@@ -127,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "29bba315",
    "metadata": {},
    "outputs": [],
