--- a/python/problem_012.ipynb
+++ b/python/problem_012.ipynb
@@ -16,13 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factors\n",
     "def factors(n):\n",
     "    f = []\n",
     "    for i in range(1, n+1):\n",
     "        if n%i == 0:\n",
     "            f.append(i)\n",
-    "    return(f)\n"
+    "    return(f)"
    ]
   },
   {
@@ -30,21 +29,9 @@
    "execution_count": 2,
    "id": "b9481546",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 7, 21]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "factors(21)"
+    "assert factors(28) == [1, 2, 4, 7, 14, 28]"
    ]
   },
   {
@@ -54,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triangular Number\n",
     "def triangular_number():\n",
     "    n = 1\n",
     "    while True:\n",
@@ -67,22 +53,10 @@
    "execution_count": 4,
    "id": "70462b22",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 6, 10, 15, 21, 28, 36, 45, 55]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
     "tri_num = triangular_number()\n",
-    "[next(tri_num) for _ in range(10)]"
+    "assert [next(tri_num) for _ in range(10)] == [1, 3, 6, 10, 15, 21, 28, 36, 45, 55]"
    ]
   },
   {
@@ -92,7 +66,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Divisors\n",
     "def divisors(n):\n",
     "    tri_num = triangular_number()\n",
     "    tri = 0 # init\n",
@@ -107,27 +80,46 @@
    "execution_count": 6,
    "id": "9d585b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "divisors(5) == 28"
+    "assert divisors(5) == 28"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d2ebc28",
+   "id": "6e675e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triangular_number():\n",
+    "    n = 0\n",
+    "    t = 0\n",
+    "    while True:\n",
+    "        n += 1\n",
+    "        t = t + n\n",
+    "        yield(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "90451dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tri = triangular_number()\n",
+    "assert next(tri) == 1\n",
+    "assert next(tri) == 3\n",
+    "assert next(tri) == 6\n",
+    "assert next(tri) == 10\n",
+    "assert next(tri) == 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d415415a",
    "metadata": {},
    "outputs": [
     {
@@ -136,20 +128,38 @@
        "76576500"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
+    "divisors(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d2ebc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2h 11min 7s ± 36.4 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
     "divisors(500)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
