--- a/julia/problem_039.ipynb
+++ b/julia/problem_039.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "P(a, b) = a + b + sqrt(a^2 + b^2)"
+    "P(a, b) = a + b + sqrt(a^2 + b^2) # faster than a + b + hypot(a, b)"
    ]
   },
   {
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  106.798 ms (0 allocations: 0 bytes)\n"
+      "  106.688 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
