--- a/julia/problem_018.ipynb
+++ b/julia/problem_018.ipynb
@@ -10,65 +10,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d3478496",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fdc66692",
    "metadata": {},
    "source": [
-    "Steps to solve the problem\n",
+    "__Steps to solve the problem__\n",
+    "\n",
+    "A top-down approach leads to a local maximum and is know as a 'greedy algorithm'.  \n",
+    "An bottom-up approach guarantees a global maximum (and is way faster than a 'brute force' approach that tries to calculate all possible paths).\n",
+    "\n",
+    "Example:\n",
     "\n",
     "```\n",
     "      03      \n",
-    "    07  04    \n",
-    "  02  04  06  \n",
-    "08  05  09  03\n",
+    "    05  04    \n",
+    "  08  07  05  \n",
+    "02  04  08  09\n",
+    "```\n",
     "\n",
-    "      03      \n",
-    "    07  04    \n",
-    "  10  13  15  \n",
-    "xx  xx  xx  xx\n",
+    "Top-down approach:  \n",
+    "03 + 05 + 08 + 04 = 20\n",
     "\n",
-    "      03      \n",
-    "    20  19    \n",
-    "  xx  xx  xx  \n",
-    "xx  xx  xx  xx\n",
-    "\n",
-    "\n",
-    "      23      \n",
-    "    xx  xx    \n",
-    "  xx  xx  xx  \n",
-    "xx  xx  xx  xx\n",
-    "```"
+    "Bottom-up approach:  \n",
+    "08 + 07 + 05 + 03 = 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ec8705be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw = \"\n",
-    "   3\n",
-    "  7 4\n",
-    " 2 4 6\n",
-    "8 5 9 3\n",
-    "\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a81d2637",
+   "execution_count": 1,
+   "id": "a9bc5148",
    "metadata": {},
    "outputs": [
     {
@@ -76,9 +46,9 @@
       "text/plain": [
        "4-element Vector{Vector{Int64}}:\n",
        " [3]\n",
-       " [7, 4]\n",
-       " [2, 4, 6]\n",
-       " [8, 5, 9, 3]"
+       " [5, 4]\n",
+       " [8, 7, 5]\n",
+       " [2, 4, 8, 9]"
       ]
      },
      "metadata": {},
@@ -86,12 +56,28 @@
     }
    ],
    "source": [
+    "raw = \"\n",
+    "      03      \n",
+    "    05  04    \n",
+    "  08  07  05  \n",
+    "02  04  08  09\n",
+    "\"\n",
+    "\n",
     "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in split(raw, \"\\n\")[2:end-1]]]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "424642e2",
+   "metadata": {},
+   "source": [
+    "#### First Solution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "f87473d2",
    "metadata": {},
    "outputs": [
     {
@@ -120,17 +106,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fc8f5197",
+   "execution_count": 3,
+   "id": "adf1e58e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in split(raw, \"\\n\")[2:end-1]]]\n",
+    "@assert maximum_path_sum(triangle) == 23"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "481149a1",
+   "metadata": {},
+   "source": [
+    "#### Optimized Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c7149f5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  291.188 ns (14 allocations: 1.05 KiB)\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "maximum_path_sum (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function maximum_path_sum(triangle)\n",
+    "    data = reverse(triangle)\n",
+    "    for i in 1:length(data)-1\n",
+    "        for j in 1:length(data[i])-1\n",
+    "            data[i+1][j] = maximum([data[i][j]+data[i+1][j], data[i][j+1]+data[i+1][j]])\n",
+    "        end\n",
+    "    end\n",
+    "    return reverse(data)[1][1]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5919c58b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in split(raw, \"\\n\")[2:end-1]]]\n",
+    "@assert maximum_path_sum(triangle) == 23"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e051facd",
+   "metadata": {},
+   "source": [
+    "#### Final Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e9c8f51a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "maximum_path_sum (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function maximum_path_sum(triangle)\n",
+    "    data = reverse(triangle)\n",
+    "    for i in 1:length(data)-1, j in 1:length(data[i])-1\n",
+    "        data[i+1][j] = maximum([data[i][j]+data[i+1][j], data[i][j+1]+data[i+1][j]])\n",
+    "    end\n",
+    "    return reverse(data)[1][1]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fc8f5197",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -142,12 +213,21 @@
     }
    ],
    "source": [
-    "@btime maximum_path_sum(triangle)"
+    "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in split(raw, \"\\n\")[2:end-1]]]\n",
+    "maximum_path_sum(triangle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39391421",
+   "metadata": {},
+   "source": [
+    "#### Answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a91c95af",
    "metadata": {},
    "outputs": [],
@@ -168,22 +248,14 @@
     "    91  71  52  38  17  14  91  43  58  50  27  29  48\n",
     "  63  66  04  68  89  53  67  30  73  16  69  87  40  31\n",
     "04  62  98  27  23  09  70  98  73  93  38  53  60  04  23\n",
-    "\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b81e560d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\"\n",
+    "\n",
     "triangle = [[parse(Int64, item) for item in elem] for elem in [split(line) for line in split(raw, \"\\n\")[2:end-1]]];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1b8ed5ab",
    "metadata": {},
    "outputs": [
@@ -191,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.755 μs (142 allocations: 12.50 KiB)\n"
+      "  0.000006 seconds (108 allocations: 8.562 KiB)\n"
      ]
     },
     {
@@ -205,7 +277,7 @@
     }
    ],
    "source": [
-    "@btime maximum_path_sum(triangle)"
+    "@time maximum_path_sum(triangle)"
    ]
   }
  ],
