--- a/julia/problem_067.ipynb
+++ b/julia/problem_067.ipynb
@@ -12,16 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3478496",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "e68c6350",
    "metadata": {},
    "outputs": [
@@ -52,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5765fb74",
    "metadata": {},
    "outputs": [],
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1c7149f5",
    "metadata": {},
    "outputs": [
@@ -79,12 +69,8 @@
    "source": [
     "function maximum_path_sum(triangle)\n",
     "    data = reverse(triangle)\n",
-    "    for i in 1:length(data)-1\n",
-    "        next_line = Int64[]\n",
-    "        for j in 1:length(data[i])-1\n",
-    "            push!(next_line, maximum([data[i][j]+data[i+1][j], data[i][j+1]+data[i+1][j]]))\n",
-    "        end\n",
-    "        data[i+1] = next_line\n",
+    "    for i in 1:length(data)-1, j in 1:length(data[i])-1\n",
+    "        data[i+1][j] = maximum([data[i][j]+data[i+1][j], data[i][j+1]+data[i+1][j]])\n",
     "    end\n",
     "    return reverse(data)[1][1]\n",
     "end"
@@ -92,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fc8f5197",
    "metadata": {},
    "outputs": [
@@ -100,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  108.542 μs (5300 allocations: 516.55 KiB)\n"
+      "  0.023260 seconds (26.98 k allocations: 1.866 MiB, 99.33% compilation time)\n"
      ]
     },
     {
@@ -114,7 +100,7 @@
     }
    ],
    "source": [
-    "@btime maximum_path_sum(triangle)"
+    "@time maximum_path_sum(triangle)"
    ]
   }
  ],
