--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.133 μs (0 allocations: 0 bytes)\n"
+      "  1.137 μs (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -53,9 +53,9 @@
    "source": [
     "@btime begin\n",
     "    s = 0\n",
-    "    for i in 1:999\n",
-    "        if (i%3 == 0) || (i%5 == 0)\n",
-    "            s += i\n",
+    "    for n in 1:999\n",
+    "        if (n%3 == 0) || (n%5 == 0)\n",
+    "            s += n\n",
     "        end\n",
     "    end\n",
     "    s\n",
@@ -73,14 +73,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0619dfa1",
+   "id": "a6ee7d9d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.990 μs (6 allocations: 7.61 KiB)\n"
+      "  658.179 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -94,12 +94,12 @@
     }
    ],
    "source": [
-    "@btime sum([i for i in 1:999 if (i%3 == 0) || (i%5 == 0)])"
+    "@btime sum(n for n in 1:999 if (n%3 == 0) || (n%5 == 0))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa1b3827",
+   "id": "df37c791",
    "metadata": {},
    "source": [
     "#### Solution 3"
@@ -108,14 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d2ebc28",
+   "id": "71d32486",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.656 μs (18 allocations: 20.66 KiB)\n"
+      "  629.900 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -129,7 +129,42 @@
     }
    ],
    "source": [
-    "@btime sum(union(0:3:999, 0:5:999))"
+    "@btime sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 1:999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1b3827",
+   "metadata": {},
+   "source": [
+    "#### Solution 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7d2ebc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.698 μs (18 allocations: 20.66 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime sum(union(3:3:999, 5:5:999))"
    ]
   }
  ],
