--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c9f1c3e",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7d2ebc28",
@@ -48,14 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5144d475",
+   "id": "3a7a1b89",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.479 μs (68 allocations: 5.78 KiB)\n"
+      "  1.363 μs (64 allocations: 5.25 KiB)\n"
      ]
     },
     {
@@ -69,7 +77,71 @@
     }
    ],
    "source": [
-    "@btime sum([f for f in fibonacci(4_000_000) if f%2 == 0])"
+    "@btime sum(f for f in fibonacci(4_000_000) if f%2 == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84912ae6",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e49959b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fibonacci (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function fibonacci(n)\n",
+    "    previous_two = [1, 2]\n",
+    "    counter = previous_two[end]\n",
+    "    while sum(previous_two) < n\n",
+    "        push!(previous_two, sum(previous_two))\n",
+    "        popfirst!(previous_two)\n",
+    "        iseven(previous_two[end]) && (counter += previous_two[end])\n",
+    "    end\n",
+    "    return counter\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4b0199f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  332.031 ns (2 allocations: 160 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4613732"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime fibonacci(4_000_000)"
    ]
   }
  ],
