--- a/julia/problem_004.ipynb
+++ b/julia/problem_004.ipynb
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81c2912c",
+   "id": "d3d90ebf",
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,11 @@
    ],
    "source": [
     "function largest_palindrome_product(n)\n",
-    "    low = 10^(n-1)\n",
-    "    high = (10^n)-1\n",
-    "    range = low:high\n",
+    "    lo = 10^(n-1)\n",
+    "    hi = (10^n)-1\n",
     "    palindrome_products = []\n",
-    "    for i in range\n",
-    "        for j in range\n",
+    "    for i in lo:hi\n",
+    "        for j in lo:hi\n",
     "            if string(i*j) == string(i*j)[end:-1:begin] # string operation\n",
     "                push!(palindrome_products, i*j)\n",
     "            end\n",
@@ -70,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  103.212 ms (6484949 allocations: 290.58 MiB)\n"
+      "  103.812 ms (6484949 allocations: 290.58 MiB)\n"
      ]
     },
     {
@@ -113,13 +112,12 @@
    ],
    "source": [
     "function largest_palindrome_product(n)\n",
-    "    low = 10^(n-1)\n",
-    "    high = (10^n)-1\n",
-    "    range = low:high\n",
+    "    lo = 10^(n-1)\n",
+    "    hi = (10^n)-1\n",
     "    palindrome_products = []\n",
-    "    for i in range\n",
-    "        for j in range\n",
-    "            if digits(i*j) == digits(i*j)[end:-1:begin] # no string operation\n",
+    "    for i in lo:hi\n",
+    "        for j in lo:hi\n",
+    "            if digits(i*j) == reverse(digits(i*j)) # no string operation\n",
     "                push!(palindrome_products, i*j)\n",
     "            end\n",
     "        end\n",
@@ -138,7 +136,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  68.099 ms (2434949 allocations: 253.22 MiB)\n"
+      "  64.048 ms (2434949 allocations: 253.22 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aa3f737",
+   "metadata": {},
+   "source": [
+    "#### Solution 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "596e9a7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "largest_palindrome_product (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function largest_palindrome_product(n)\n",
+    "    lo = 10^(n-1)\n",
+    "    hi = (10^n)-1\n",
+    "    palindrome_products = []\n",
+    "    for prod in Set(i*j for i in lo:hi, j in lo:hi)\n",
+    "        if digits(prod) == reverse(digits(prod)) # no string operation\n",
+    "            push!(palindrome_products, prod)\n",
+    "        end\n",
+    "    end\n",
+    "    return maximum(palindrome_products)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "67cb8771",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  30.545 ms (683887 allocations: 89.43 MiB)\n"
      ]
     },
     {
