--- a/julia/problem_005.ipynb
+++ b/julia/problem_005.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3957408b",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "55678f7f",
@@ -37,7 +45,7 @@
    ],
    "source": [
     "function smallest_multiple(n::Int64)::Int64\n",
-    "    x = 1\n",
+    "    x = n\n",
     "    while !all([x%i == 0 for i in 1:n])\n",
     "        x += 1\n",
     "    end\n",
@@ -65,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  164.495 s (931169730 allocations: 31.22 GiB)\n"
+      "  176.783 s (931169673 allocations: 31.22 GiB)\n"
      ]
     },
     {
@@ -80,6 +88,41 @@
    ],
    "source": [
     "@btime smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2dfeda4",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ea3d423d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  311.556 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime lcm(1:20)"
    ]
   }
  ],
