--- a/julia/problem_007.ipynb
+++ b/julia/problem_007.ipynb
@@ -16,19 +16,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using BenchmarkTools"
+    "using Primes, BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e32a6f8",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81c2912c",
+   "id": "00d93c48",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.736 ms (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "primes (generic function with 1 method)"
+       "104743"
       ]
      },
      "metadata": {},
@@ -36,7 +51,35 @@
     }
    ],
    "source": [
-    "function primes(n::Int64)::Vector{Int64}\n",
+    "@btime Primes.prime(10_001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03de2dfb",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "81c2912c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "eratosthenes (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function eratosthenes(n::Int64)::Vector{Int64}\n",
     "    D = Dict{Int64, Vector{Int64}}()\n",
     "    P = Vector{Int64}()\n",
     "    q = 2\n",
@@ -66,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9d585b52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@assert primes(6)[end] == 13"
+    "@assert eratosthenes(6)[end] == 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -84,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  11.794 ms (165621 allocations: 12.42 MiB)\n"
+      "  11.767 ms (165621 allocations: 12.42 MiB)\n"
      ]
     },
     {
@@ -98,7 +141,7 @@
     }
    ],
    "source": [
-    "@btime primes(10_001)[end]"
+    "@btime eratosthenes(10_001)[end]"
    ]
   },
   {
