--- a/julia/problem_009.ipynb
+++ b/julia/problem_009.ipynb
@@ -20,9 +20,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18a218f8",
+   "metadata": {},
+   "source": [
+    "#### Solution 1 (brute force)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9820fc9",
+   "id": "7545fe10",
    "metadata": {},
    "outputs": [
     {
@@ -36,30 +44,26 @@
     }
    ],
    "source": [
-    "function triplet_product(n)\n",
-    "    for a in 1:n\n",
-    "        for b in 1:n\n",
-    "            for c in 1:n\n",
-    "                if (a < b < c) && (a^2 + b^2 == c^2) && (a + b + c == 1000)\n",
-    "                    return a * b * c\n",
-    "                end\n",
-    "            end\n",
+    "function triplet_product()::Int64\n",
+    "    for c in 1:1000, b in 1:1000, a in 1:1000\n",
+    "        if (a < b < c) && (a + b + c == 1000) && (a^2 + b^2 == c^2)\n",
+    "            return a * b * c\n",
     "        end\n",
     "    end\n",
-    "end\n"
+    "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "91dd79d8",
+   "id": "b6fe08a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  85.164 ms (0 allocations: 0 bytes)\n"
+      "  50.020 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -73,7 +77,164 @@
     }
    ],
    "source": [
-    "@btime triplet_product(1000)"
+    "@btime triplet_product()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a6a4170",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (smart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb0dba79",
+   "metadata": {},
+   "source": [
+    "$$ a < b < c $$\n",
+    "$$ c > b > a $$\n",
+    "$$ c + b + a = 1000 $$\n",
+    "$$ \\text{Therefore } b \\text{ cannot be greater than 499} $$\n",
+    "$$ a = 1000 - b - c$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c87c3644",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "triplet_product (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function triplet_product()::Int64 # smart\n",
+    "    for c in 1:1000, b in 1:500\n",
+    "        a = 1000 - b - c\n",
+    "        if (a < b < c) && (a^2 + b^2 == c^2)\n",
+    "            return a * b * c\n",
+    "        end\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7a8f5493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  86.750 μs (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "31875000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime triplet_product()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c92d0dcc",
+   "metadata": {},
+   "source": [
+    "#### Solution 3 (oneliner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6634c04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  167.416 μs (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "31875000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime first((1000-b-c) * b * c for c in 1:1000, b in 1:500 if (1000-b-c < b < c) && ((1000-b-c)^2 + b^2 == c^2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4735bd",
+   "metadata": {},
+   "source": [
+    "#### Solution 4 (hypotenuse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "583b1971",
+   "metadata": {},
+   "source": [
+    "In geometry, a hypotenuse is the side of a right triangle opposite the right angle.   \n",
+    "It is the longest side of any such triangle; the two other shorter sides of such a triangle are called catheti or legs.  \n",
+    "\n",
+    "$$ c = \\sqrt{a^{2}+b^{2}} $$\n",
+    "$$ c^{2} = a^{2} + b^{2} $$\n",
+    "$$ \\text{hypot(a, b) = c} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6249cc2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  698.708 μs (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "31875000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime first((1000-b-c) * b * c for c in 1:1000, b in 1:500 if 1000-b-c < b < c && hypot(1000-b-c, b) == c)"
    ]
   }
  ],
