--- a/julia/problem_010.ipynb
+++ b/julia/problem_010.ipynb
@@ -22,20 +22,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03f479fd",
+   "id": "ed861d66",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  265.166 μs (15 allocations: 474.80 KiB)\n"
+      "  2.607 ms (5 allocations: 1.65 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "986017447"
+       "142913828922"
       ]
      },
      "metadata": {},
@@ -43,10 +43,7 @@
     }
    ],
    "source": [
-    "@btime begin\n",
-    "    n = 150_000 # try different values to minimize overhead\n",
-    "    sum([prime for prime in primes(n) if prime < 2_000_000])\n",
-    "end"
+    "@btime sum(primes(1, prevprime(2_000_000)))"
    ]
   }
  ],
