--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -20,13 +20,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffd42d1b",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "49e5470f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.637 μs (1 allocation: 128 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime maximum(keys(Primes.factor(600851475143)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d906a82",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1f4cd19c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function next_prime(p)::Int64\n",
+    "function next_prime(p::Int64)::Int64\n",
     "    p += 1\n",
     "    while !isprime(p)\n",
     "        p += 1\n",
@@ -37,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bf328a0a",
    "metadata": {},
    "outputs": [
@@ -52,7 +95,7 @@
     }
    ],
    "source": [
-    "function prime_factorization(n)\n",
+    "function prime_factorization(n::Int64)::Vector{Int64}\n",
     "    factors = Int64[]\n",
     "    index = 0\n",
     "    prime = 0\n",
@@ -70,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ea4b6847",
    "metadata": {},
    "outputs": [],
@@ -80,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ff73ec22",
    "metadata": {},
    "outputs": [
@@ -88,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  20.500 μs (2 allocations: 144 bytes)\n"
+      "  20.459 μs (2 allocations: 144 bytes)\n"
      ]
     },
     {
