--- a/julia/problem_006.ipynb
+++ b/julia/problem_006.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31e9065e",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "81c2912c",
@@ -37,7 +45,7 @@
    ],
    "source": [
     "function sum_square_difference(n)\n",
-    "    sum_of_square = sum([i^2 for i in 1:n])\n",
+    "    sum_of_square = sum(i^2 for i in 1:n)\n",
     "    square_of_sum = sum(1:n)^2\n",
     "    return square_of_sum - sum_of_square\n",
     "end"
@@ -63,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  69.303 ns (1 allocation: 896 bytes)\n"
+      "  2.000 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -78,6 +86,41 @@
    ],
    "source": [
     "@btime sum_square_difference(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7972b71f",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e370ce19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.875 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25164150"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime -(sum(1:100)^2, sum(i^2 for i in 1:100))"
    ]
   }
  ],
