--- a/julia/problem_008.ipynb
+++ b/julia/problem_008.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "abccc5dd",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "06633235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "digit_series = digits(parse(BigInt, read(\"data/0008_series.txt\", String)));"
+    "digit_series = digits(parse(BigInt, read(\"../data/0008_series.txt\", String)));"
    ]
   },
   {
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "62dc1b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "largest_product (generic function with 3 methods)"
+       "largest_product (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "bf847f05",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "c9067a4f",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  25.667 μs (988 allocations: 154.38 KiB)\n"
+      "  25.708 μs (988 allocations: 154.38 KiB)\n"
      ]
     },
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "2edeeac7",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  74.416 μs (3198 allocations: 204.38 KiB)\n"
+      "  72.917 μs (3198 allocations: 204.38 KiB)\n"
      ]
     },
     {
