--- a/julia/problem_010.ipynb
+++ b/julia/problem_010.ipynb
@@ -22,14 +22,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed861d66",
+   "id": "109b26f6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.607 ms (5 allocations: 1.65 MiB)\n"
+      "  2.603 ms (5 allocations: 1.65 MiB)\n"
      ]
     },
     {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "@btime sum(primes(1, prevprime(2_000_000)))"
+    "@btime sum(primes(2_000_000))"
    ]
   }
  ],
